// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ContenteNewProjectModal renders correctly a component to show ContenteNewProjectModal 1`] = `
<ContenteNewProjectModal>
  <div
    className="modal-content"
  >
    <h4>
      Novo Projeto
    </h4>
    <div
      className="row"
    >
      <form
        className="col s12"
      >
        <div
          className="input-field col s5"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons prefix"
          >
            insert_drive_file
          </i>
          <input
            name="projectName"
            placeholder="Nome Projeto"
            type="tel"
          />
        </div>
      </form>
    </div>
  </div>
</ContenteNewProjectModal>
`;

exports[`Test ContenteNewProjectModal renders correctly a component to show ContenteNewProjectModal with correct classes 1`] = `
<ContenteNewProjectModal
  handleChange={[MockFunction]}
>
  <div
    className="modal-content"
  >
    <h4>
      Novo Projeto
    </h4>
    <div
      className="row"
    >
      <form
        className="col s12"
      >
        <div
          className="input-field col s5"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons prefix"
          >
            insert_drive_file
          </i>
          <input
            name="projectName"
            onChange={[MockFunction]}
            placeholder="Nome Projeto"
            type="tel"
          />
        </div>
      </form>
    </div>
  </div>
</ContenteNewProjectModal>
`;

exports[`Test ContenteNewProjectModal renders correctly a component to show ContenteNewProjectModal with correct props 1`] = `
<ContenteNewProjectModal
  handleChange={[MockFunction]}
>
  <div
    className="modal-content"
  >
    <h4>
      Novo Projeto
    </h4>
    <div
      className="row"
    >
      <form
        className="col s12"
      >
        <div
          className="input-field col s5"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <i
            className="material-icons prefix"
          >
            insert_drive_file
          </i>
          <input
            name="projectName"
            onChange={[MockFunction]}
            placeholder="Nome Projeto"
            type="tel"
          />
        </div>
      </form>
    </div>
  </div>
</ContenteNewProjectModal>
`;
